Fixed issue with scrollbars and minor changes

--- a/src/components/GameConfigurator/styles.module.css
+++ b/src/components/GameConfigurator/styles.module.css
@@ -34,7 +34,7 @@
   background-image: url("assets/icons/rock_joingame2.svg");
   background-repeat: no-repeat;
   background-position: center;
-  height: 40%;
+  height: 38%;
   margin-top: 1rem;
   display: grid;
   align-items: center;
