--- a/src/pages/About/styles.module.css
+++ b/src/pages/About/styles.module.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   background-position: center;
-  min-height: 100%;
+  height: 100%;
 }
 
 .buttonContainer {
