--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -8,10 +8,10 @@
   flex-direction: column;
   background-position: center;
   min-height: 100%;
-  overflow: hidden;
 }
 
 .homeContainer {
+  padding-top: 2rem;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -23,15 +23,13 @@
 
 .gotchiMainContainer {
   min-width: 40%;
-  overflow: hidden;
 }
 
 .gameConfigContainer {
   min-width: 40%;
-  min-height: 100%;
+  height: 100%;
   display: grid;
   justify-content: center;
-  overflow: hidden;
 }
 
 .selectorContainer {
@@ -59,7 +57,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position-x: center;
-  width: 55%;
+  width: 50%;
   left: 40%;
   aspect-ratio: 277 / 364;
   position: relative;
